impl linear_regression_with_explanation

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -1222,11 +1222,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "stochastic? 방법을 사용하게 되면 정확한 정답으로 가지는 않음. (mini batch도 사실 참값을 구하는 것은 아님. )\n",
+    "근사치를 구하는 방법이지만, 데이터의 개수가 굉장히 클 경우, 매우 유용한 방법이 될 수 있음."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "오차를 줄일 수 있는 방법은 오히려 mini_batch로 가는 방법이 될 수 있다. "
+   ]
   }
  ],
  "metadata": {
